// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traceCallHandler > should execute a contract call with 4byteTracer 1`] = `
{
  "0x1e26fd33-32": 1,
  "0x349a0054-192": 1,
  "0x3fb5c1cb-32": 1,
  "0x5FbDB2315678afecb367f032d93F642f64180aa3": {
    "0x1e26fd33": [
      "0x0000000000000000000000000000000000000000000000000000000000000001",
    ],
    "0x349a0054": [
      "0x000000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000080000000000000000000000000f39fd6e51aad88f6f4ce6ab8827279cfffb9226600000000000000000000000000000000000000000000000000000000000000047465737400000000000000000000000000000000000000000000000000000000",
    ],
    "0x3fb5c1cb": [
      "0x0000000000000000000000000000000000000000000000000000000000000002",
    ],
    "0x7fcaf666": [
      "0x000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000047465737400000000000000000000000000000000000000000000000000000000",
    ],
    "0xe30081a0": [
      "0x000000000000000000000000f39fd6e51aad88f6f4ce6ab8827279cfffb92266",
    ],
  },
  "0x7fcaf666-96": 1,
  "0xe30081a0-32": 1,
}
`;

exports[`traceCallHandler > should execute a contract call with callTracer 1`] = `
{
  "calls": [
    {
      "calls": [],
      "from": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
      "gas": 16517164n,
      "gasUsed": 4536n,
      "input": "0xc6888fa10000000000000000000000000000000000000000000000000000000000000002",
      "output": "0x0000000000000000000000000000000000000000000000000000000000000004",
      "to": "0xa16e02e87b7454126e5e10d957a927a7f5b5d2be",
      "type": "CALL",
      "value": 0n,
    },
  ],
  "from": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
  "gas": 16784800n,
  "gasUsed": 11700n,
  "input": "0x575f45050000000000000000000000000000000000000000000000000000000000000002",
  "output": "0x0000000000000000000000000000000000000000000000000000000000000004",
  "to": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
  "type": "CALL",
  "value": 0n,
}
`;

exports[`traceCallHandler > should execute a contract call with default tracer 1`] = `
{
  "failed": false,
  "gas": 6669n,
  "returnValue": "0x",
  "structLogs": [
    {
      "depth": 0,
      "gas": 16784800n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 0,
      "stack": [],
    },
    {
      "depth": 0,
      "gas": 16784797n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 2,
      "stack": [
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16784794n,
      "gasCost": 15n,
      "op": "MSTORE",
      "pc": 4,
      "stack": [
        "0x80",
        "0x40",
      ],
    },
    {
      "depth": 0,
      "gas": 16784782n,
      "gasCost": 4n,
      "op": "CALLVALUE",
      "pc": 5,
      "stack": [],
    },
    {
      "depth": 0,
      "gas": 16784780n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 6,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784777n,
      "gasCost": 6n,
      "op": "ISZERO",
      "pc": 7,
      "stack": [
        "0x0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784774n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 8,
      "stack": [
        "0x0",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784771n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 11,
      "stack": [
        "0x0",
        "0x1",
        "0xf",
      ],
    },
    {
      "depth": 0,
      "gas": 16784761n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 15,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784760n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 16,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784758n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 17,
      "stack": [],
    },
    {
      "depth": 0,
      "gas": 16784755n,
      "gasCost": 4n,
      "op": "CALLDATASIZE",
      "pc": 19,
      "stack": [
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784753n,
      "gasCost": 6n,
      "op": "LT",
      "pc": 20,
      "stack": [
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784750n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 21,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784747n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 24,
      "stack": [
        "0x0",
        "0xe8",
      ],
    },
    {
      "depth": 0,
      "gas": 16784737n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 25,
      "stack": [],
    },
    {
      "depth": 0,
      "gas": 16784735n,
      "gasCost": 6n,
      "op": "CALLDATALOAD",
      "pc": 26,
      "stack": [
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784732n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 27,
      "stack": [
        "0x3fb5c1cb00000000000000000000000000000000000000000000000000000000",
      ],
    },
    {
      "depth": 0,
      "gas": 16784729n,
      "gasCost": 6n,
      "op": "SHR",
      "pc": 29,
      "stack": [
        "0x3fb5c1cb00000000000000000000000000000000000000000000000000000000",
        "0xe0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784726n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 30,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784723n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 31,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784720n,
      "gasCost": 6n,
      "op": "GT",
      "pc": 36,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x7fcaf666",
      ],
    },
    {
      "depth": 0,
      "gas": 16784717n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 37,
      "stack": [
        "0x3fb5c1cb",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784714n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 40,
      "stack": [
        "0x3fb5c1cb",
        "0x1",
        "0x8a",
      ],
    },
    {
      "depth": 0,
      "gas": 16784704n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 138,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784703n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 139,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784700n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 140,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784697n,
      "gasCost": 6n,
      "op": "GT",
      "pc": 145,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x349a0054",
      ],
    },
    {
      "depth": 0,
      "gas": 16784694n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 146,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784691n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 149,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
        "0xc6",
      ],
    },
    {
      "depth": 0,
      "gas": 16784681n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 150,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784678n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 151,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784675n,
      "gasCost": 6n,
      "op": "EQ",
      "pc": 156,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x349a0054",
      ],
    },
    {
      "depth": 0,
      "gas": 16784672n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 157,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784669n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 160,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
        "0x142",
      ],
    },
    {
      "depth": 0,
      "gas": 16784659n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 161,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784656n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 162,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784653n,
      "gasCost": 6n,
      "op": "EQ",
      "pc": 167,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x38cc4831",
      ],
    },
    {
      "depth": 0,
      "gas": 16784650n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 168,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784647n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 171,
      "stack": [
        "0x3fb5c1cb",
        "0x0",
        "0x15e",
      ],
    },
    {
      "depth": 0,
      "gas": 16784637n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 172,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784634n,
      "gasCost": 6n,
      "op": "PUSH4",
      "pc": 173,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784631n,
      "gasCost": 6n,
      "op": "EQ",
      "pc": 178,
      "stack": [
        "0x3fb5c1cb",
        "0x3fb5c1cb",
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784628n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 179,
      "stack": [
        "0x3fb5c1cb",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784625n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 182,
      "stack": [
        "0x3fb5c1cb",
        "0x1",
        "0x17c",
      ],
    },
    {
      "depth": 0,
      "gas": 16784615n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 380,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784614n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 381,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16784611n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 384,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
      ],
    },
    {
      "depth": 0,
      "gas": 16784608n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 386,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784605n,
      "gasCost": 4n,
      "op": "CALLDATASIZE",
      "pc": 387,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784603n,
      "gasCost": 6n,
      "op": "SUB",
      "pc": 388,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784600n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 389,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16784597n,
      "gasCost": 6n,
      "op": "ADD",
      "pc": 390,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x20",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784594n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 391,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784591n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 392,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784588n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 395,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x24",
        "0x4",
        "0x191",
      ],
    },
    {
      "depth": 0,
      "gas": 16784585n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 396,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784582n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 397,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784579n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 400,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0xd1b",
      ],
    },
    {
      "depth": 0,
      "gas": 16784571n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3355,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784570n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 3356,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784568n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 3357,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784565n,
      "gasCost": 6n,
      "op": "DUP3",
      "pc": 3359,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16784562n,
      "gasCost": 6n,
      "op": "DUP5",
      "pc": 3360,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x20",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784559n,
      "gasCost": 6n,
      "op": "SUB",
      "pc": 3361,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x20",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784556n,
      "gasCost": 6n,
      "op": "SLT",
      "pc": 3362,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x20",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16784553n,
      "gasCost": 6n,
      "op": "ISZERO",
      "pc": 3363,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784550n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3364,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784547n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 3367,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x1",
        "0xd30",
      ],
    },
    {
      "depth": 0,
      "gas": 16784537n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3376,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784536n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 3377,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784534n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3378,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784531n,
      "gasCost": 6n,
      "op": "DUP5",
      "pc": 3381,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
      ],
    },
    {
      "depth": 0,
      "gas": 16784528n,
      "gasCost": 6n,
      "op": "DUP3",
      "pc": 3382,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784525n,
      "gasCost": 6n,
      "op": "DUP6",
      "pc": 3383,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784522n,
      "gasCost": 6n,
      "op": "ADD",
      "pc": 3384,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x0",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784519n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3385,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784516n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3388,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0xb23",
      ],
    },
    {
      "depth": 0,
      "gas": 16784508n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2851,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784507n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 2852,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784505n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2853,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784502n,
      "gasCost": 6n,
      "op": "CALLDATALOAD",
      "pc": 2854,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x0",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784499n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2855,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784496n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2856,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784494n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2857,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784491n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2860,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
      ],
    },
    {
      "depth": 0,
      "gas": 16784488n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2861,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784485n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2864,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb0d",
      ],
    },
    {
      "depth": 0,
      "gas": 16784477n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2829,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784476n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2830,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784473n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2833,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
      ],
    },
    {
      "depth": 0,
      "gas": 16784470n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2834,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784467n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2837,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
        "0x2",
        "0xb04",
      ],
    },
    {
      "depth": 0,
      "gas": 16784459n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2820,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784458n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 2821,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784456n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2822,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784453n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2823,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
        "0x2",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784450n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2824,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
        "0x2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784448n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 2825,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0xb16",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784445n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2826,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0x2",
        "0x2",
        "0xb16",
      ],
    },
    {
      "depth": 0,
      "gas": 16784442n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2827,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0x2",
        "0xb16",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784440n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2828,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0x2",
        "0xb16",
      ],
    },
    {
      "depth": 0,
      "gas": 16784432n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2838,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784431n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2839,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784428n,
      "gasCost": 6n,
      "op": "EQ",
      "pc": 2840,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784425n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 2841,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0x1",
      ],
    },
    {
      "depth": 0,
      "gas": 16784422n,
      "gasCost": 20n,
      "op": "JUMPI",
      "pc": 2844,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
        "0x1",
        "0xb20",
      ],
    },
    {
      "depth": 0,
      "gas": 16784412n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2848,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784411n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2849,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784409n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2850,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
        "0xb31",
      ],
    },
    {
      "depth": 0,
      "gas": 16784401n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2865,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784400n,
      "gasCost": 6n,
      "op": "SWAP3",
      "pc": 2866,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0xd3d",
        "0x24",
        "0x4",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784397n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 2867,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
        "0x24",
        "0x4",
        "0xd3d",
      ],
    },
    {
      "depth": 0,
      "gas": 16784394n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2868,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
        "0xd3d",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784392n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2869,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
        "0xd3d",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784390n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2870,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
        "0xd3d",
      ],
    },
    {
      "depth": 0,
      "gas": 16784382n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3389,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784381n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 3390,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x0",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784378n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3391,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x2",
        "0x0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784376n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3392,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784374n,
      "gasCost": 6n,
      "op": "SWAP3",
      "pc": 3393,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x191",
        "0x24",
        "0x4",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784371n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 3394,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x24",
        "0x4",
        "0x191",
      ],
    },
    {
      "depth": 0,
      "gas": 16784368n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3395,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x191",
        "0x4",
        "0x24",
      ],
    },
    {
      "depth": 0,
      "gas": 16784366n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3396,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x191",
        "0x4",
      ],
    },
    {
      "depth": 0,
      "gas": 16784364n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3397,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x191",
      ],
    },
    {
      "depth": 0,
      "gas": 16784356n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 401,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784355n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 402,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784352n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 405,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x559",
      ],
    },
    {
      "depth": 0,
      "gas": 16784344n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 1369,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784343n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 1370,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784340n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 1371,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784338n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 1372,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16784335n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 1373,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16784332n,
      "gasCost": 5000n,
      "op": "SSTORE",
      "pc": 1374,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779332n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 1375,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779330n,
      "gasCost": 6n,
      "op": "PUSH32",
      "pc": 1376,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779327n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 1409,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
      ],
    },
    {
      "depth": 0,
      "gas": 16779324n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 1410,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779321n,
      "gasCost": 6n,
      "op": "MLOAD",
      "pc": 1412,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x2",
        "0x40",
      ],
    },
    {
      "depth": 0,
      "gas": 16779318n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 1413,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779315n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 1416,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x2",
        "0x80",
        "0x58e",
      ],
    },
    {
      "depth": 0,
      "gas": 16779312n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 1417,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779309n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 1418,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779306n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 1421,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xd55",
      ],
    },
    {
      "depth": 0,
      "gas": 16779298n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3413,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779297n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 3414,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779295n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 3415,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779292n,
      "gasCost": 6n,
      "op": "DUP3",
      "pc": 3417,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0x0",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16779289n,
      "gasCost": 6n,
      "op": "ADD",
      "pc": 3418,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0x0",
        "0x20",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779286n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 3419,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0x0",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779283n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3420,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779281n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3421,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779278n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 3424,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
      ],
    },
    {
      "depth": 0,
      "gas": 16779276n,
      "gasCost": 6n,
      "op": "DUP4",
      "pc": 3425,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779273n,
      "gasCost": 6n,
      "op": "ADD",
      "pc": 3426,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x0",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779270n,
      "gasCost": 6n,
      "op": "DUP5",
      "pc": 3427,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779267n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3428,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779264n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3431,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd46",
      ],
    },
    {
      "depth": 0,
      "gas": 16779256n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3398,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779255n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3399,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779252n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 3402,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
      ],
    },
    {
      "depth": 0,
      "gas": 16779249n,
      "gasCost": 6n,
      "op": "PUSH2",
      "pc": 3403,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779246n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3406,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
        "0x2",
        "0xb04",
      ],
    },
    {
      "depth": 0,
      "gas": 16779238n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 2820,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779237n,
      "gasCost": 4n,
      "op": "PUSH0",
      "pc": 2821,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779235n,
      "gasCost": 6n,
      "op": "DUP2",
      "pc": 2822,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779232n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2823,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
        "0x2",
        "0x0",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779229n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2824,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
        "0x2",
        "0x2",
        "0x0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779227n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 2825,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0xd4f",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779224n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 2826,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0x2",
        "0x2",
        "0xd4f",
      ],
    },
    {
      "depth": 0,
      "gas": 16779221n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 2827,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0x2",
        "0xd4f",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779219n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 2828,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0x2",
        "0xd4f",
      ],
    },
    {
      "depth": 0,
      "gas": 16779211n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3407,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779210n,
      "gasCost": 6n,
      "op": "DUP3",
      "pc": 3408,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779207n,
      "gasCost": 12n,
      "op": "MSTORE",
      "pc": 3409,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
        "0x2",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779198n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3410,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779196n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3411,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779194n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3412,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
        "0xd68",
      ],
    },
    {
      "depth": 0,
      "gas": 16779186n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 3432,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779185n,
      "gasCost": 6n,
      "op": "SWAP3",
      "pc": 3433,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x58e",
        "0x2",
        "0x80",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779182n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 3434,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x2",
        "0x80",
        "0x58e",
      ],
    },
    {
      "depth": 0,
      "gas": 16779179n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3435,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x58e",
        "0x80",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16779177n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 3436,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x58e",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779175n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 3437,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x58e",
      ],
    },
    {
      "depth": 0,
      "gas": 16779167n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 1422,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779166n,
      "gasCost": 6n,
      "op": "PUSH1",
      "pc": 1423,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779163n,
      "gasCost": 6n,
      "op": "MLOAD",
      "pc": 1425,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x40",
      ],
    },
    {
      "depth": 0,
      "gas": 16779160n,
      "gasCost": 6n,
      "op": "DUP1",
      "pc": 1426,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779157n,
      "gasCost": 6n,
      "op": "SWAP2",
      "pc": 1427,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0xa0",
        "0x80",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16779154n,
      "gasCost": 6n,
      "op": "SUB",
      "pc": 1428,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x80",
        "0x80",
        "0xa0",
      ],
    },
    {
      "depth": 0,
      "gas": 16779151n,
      "gasCost": 6n,
      "op": "SWAP1",
      "pc": 1429,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x80",
        "0x20",
      ],
    },
    {
      "depth": 0,
      "gas": 16779148n,
      "gasCost": 1381n,
      "op": "LOG1",
      "pc": 1430,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
        "0x9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c8542591",
        "0x20",
        "0x80",
      ],
    },
    {
      "depth": 0,
      "gas": 16778142n,
      "gasCost": 4n,
      "op": "POP",
      "pc": 1431,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
        "0x2",
      ],
    },
    {
      "depth": 0,
      "gas": 16778140n,
      "gasCost": 16n,
      "op": "JUMP",
      "pc": 1432,
      "stack": [
        "0x3fb5c1cb",
        "0x196",
      ],
    },
    {
      "depth": 0,
      "gas": 16778132n,
      "gasCost": 2n,
      "op": "JUMPDEST",
      "pc": 406,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
    {
      "depth": 0,
      "gas": 16778131n,
      "gasCost": 0n,
      "op": "STOP",
      "pc": 407,
      "stack": [
        "0x3fb5c1cb",
      ],
    },
  ],
}
`;

exports[`traceCallHandler > should execute a contract call with prestateTracer and diffMode false 1`] = `
{
  "0x0000000000000000000000000000000000000000": {
    "balance": "0x3635c9adc5dea00000",
    "code": "0x",
    "nonce": 0,
    "storage": {},
  },
  "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
    "balance": "0x0",
    "code": "0x608060405234801561000f575f5ffd5b50600436106100e8575f3560e01c80637fcaf6661161008a578063981f549911610064578063981f549914610220578063d0da9af514610241578063e30081a014610271578063f2c9ecd81461028d576100e8565b80637fcaf666146101c857806389ea642f146101e45780638d5d4de714610202576100e8565b8063349a0054116100c6578063349a00541461014257806338cc48311461015e5780633fb5c1cb1461017c578063575f450514610198576100e8565b806301ef8faa146100ec57806312a7b914146101085780631e26fd3314610126575b5f5ffd5b61010660048036038101906101019190610a51565b6102ab565b005b6101106102ee565b60405161011d9190610a96565b60405180910390f35b610140600480360381019061013b9190610ad9565b610303565b005b61015c60048036038101906101579190610c73565b610356565b005b610166610531565b6040516101739190610d02565b60405180910390f35b61019660048036038101906101919190610d1b565b610559565b005b6101b260048036038101906101ad9190610d1b565b610599565b6040516101bf9190610d55565b60405180910390f35b6101e260048036038101906101dd9190610d6e565b61067c565b005b6101ec6106c6565b6040516101f99190610e15565b60405180910390f35b61020a610756565b6040516102179190610d02565b60405180910390f35b61022861077b565b6040516102389493929190610e35565b60405180910390f35b61025b60048036038101906102569190610d1b565b6107ae565b6040516102689190610d55565b60405180910390f35b61028b60048036038101906102869190610a51565b610964565b005b6102956109de565b6040516102a29190610d55565b60405180910390f35b8060045f6101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff16021790555050565b5f60015f9054906101000a900460ff16905090565b8060015f6101000a81548160ff0219169083151502179055507fd31368d67652afe87682ed73c60ba1c2f499ae414a86d618c275326b0d6739968160405161034b9190610a96565b60405180910390a150565b3073ffffffffffffffffffffffffffffffffffffffff16633fb5c1cb856040518263ffffffff1660e01b815260040161038f9190610d55565b5f604051808303815f87803b1580156103a6575f5ffd5b505af11580156103b8573d5f5f3e3d5ffd5b505050503073ffffffffffffffffffffffffffffffffffffffff16631e26fd33846040518263ffffffff1660e01b81526004016103f59190610a96565b5f604051808303815f87803b15801561040c575f5ffd5b505af115801561041e573d5f5f3e3d5ffd5b505050503073ffffffffffffffffffffffffffffffffffffffff16637fcaf666836040518263ffffffff1660e01b815260040161045b9190610e15565b5f604051808303815f87803b158015610472575f5ffd5b505af1158015610484573d5f5f3e3d5ffd5b505050503073ffffffffffffffffffffffffffffffffffffffff1663e30081a0826040518263ffffffff1660e01b81526004016104c19190610d02565b5f604051808303815f87803b1580156104d8575f5ffd5b505af11580156104ea573d5f5f3e3d5ffd5b505050507fc3e1073869e2f3735605599cbfd67bc84b7ce8f34226501a7c84f1bea115cb0c848484846040516105239493929190610e35565b60405180910390a150505050565b5f60035f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff16905090565b805f819055507f9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c85425918160405161058e9190610d55565b60405180910390a150565b5f5f60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1690505f8173ffffffffffffffffffffffffffffffffffffffff1663c6888fa1856040518263ffffffff1660e01b81526004016105f99190610d55565b6020604051808303815f875af1158015610615573d5f5f3e3d5ffd5b505050506040513d601f19601f820116820180604052508101906106399190610e93565b90507f9d164645d2740a65754f47c13dc8efcc8a63d0f41785c4d3cd1dfd289e64a3bc8160405161066a9190610d55565b60405180910390a18092505050919050565b806002908161068b91906110bb565b507fd824731128b3439672eb2a63774a112947e43a4102ef25ba8fe18ad8930a9188816040516106bb9190610e15565b60405180910390a150565b6060600280546106d590610eeb565b80601f016020809104026020016040519081016040528092919081815260200182805461070190610eeb565b801561074c5780601f106107235761010080835404028352916020019161074c565b820191905f5260205f20905b81548152906001019060200180831161072f57829003601f168201915b5050505050905090565b60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1681565b5f5f60605f6107886109de565b6107906102ee565b6107986106c6565b6107a0610531565b935093509350935090919293565b5f5f826040516024016107c19190610d55565b6040516020818303038152906040527fc6888fa1000000000000000000000000000000000000000000000000000000007bffffffffffffffffffffffffffffffffffffffffffffffffffffffff19166020820180517bffffffffffffffffffffffffffffffffffffffffffffffffffffffff838183161783525050505090505f5f60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1673ffffffffffffffffffffffffffffffffffffffff168360405161088891906111ce565b5f60405180830381855af49150503d805f81146108c0576040519150601f19603f3d011682016040523d82523d5f602084013e6108c5565b606091505b50915091508161090a576040517f08c379a00000000000000000000000000000000000000000000000000000000081526004016109019061122e565b60405180910390fd5b5f8180602001905181019061091f9190610e93565b90507fb26b3b59a9756bf7416fe9326c05726fbfe955ce9e948f70da7a91f4978fb4d2816040516109509190610d55565b60405180910390a180945050505050919050565b8060035f6101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff1602179055507f88749aed52403b3a8ec7763273d5665190617f46de93b08aab1cc6ec80dc2fb4816040516109d39190610d02565b60405180910390a150565b5f5f54905090565b5f604051905090565b5f5ffd5b5f5ffd5b5f73ffffffffffffffffffffffffffffffffffffffff82169050919050565b5f610a20826109f7565b9050919050565b610a3081610a16565b8114610a3a575f5ffd5b50565b5f81359050610a4b81610a27565b92915050565b5f60208284031215610a6657610a656109ef565b5b5f610a7384828501610a3d565b91505092915050565b5f8115159050919050565b610a9081610a7c565b82525050565b5f602082019050610aa95f830184610a87565b92915050565b610ab881610a7c565b8114610ac2575f5ffd5b50565b5f81359050610ad381610aaf565b92915050565b5f60208284031215610aee57610aed6109ef565b5b5f610afb84828501610ac5565b91505092915050565b5f819050919050565b610b1681610b04565b8114610b20575f5ffd5b50565b5f81359050610b3181610b0d565b92915050565b5f5ffd5b5f5ffd5b5f601f19601f8301169050919050565b7f4e487b71000000000000000000000000000000000000000000000000000000005f52604160045260245ffd5b610b8582610b3f565b810181811067ffffffffffffffff82111715610ba457610ba3610b4f565b5b80604052505050565b5f610bb66109e6565b9050610bc28282610b7c565b919050565b5f67ffffffffffffffff821115610be157610be0610b4f565b5b610bea82610b3f565b9050602081019050919050565b828183375f83830152505050565b5f610c17610c1284610bc7565b610bad565b905082815260208101848484011115610c3357610c32610b3b565b5b610c3e848285610bf7565b509392505050565b5f82601f830112610c5a57610c59610b37565b5b8135610c6a848260208601610c05565b91505092915050565b5f5f5f5f60808587031215610c8b57610c8a6109ef565b5b5f610c9887828801610b23565b9450506020610ca987828801610ac5565b935050604085013567ffffffffffffffff811115610cca57610cc96109f3565b5b610cd687828801610c46565b9250506060610ce787828801610a3d565b91505092959194509250565b610cfc81610a16565b82525050565b5f602082019050610d155f830184610cf3565b92915050565b5f60208284031215610d3057610d2f6109ef565b5b5f610d3d84828501610b23565b91505092915050565b610d4f81610b04565b82525050565b5f602082019050610d685f830184610d46565b92915050565b5f60208284031215610d8357610d826109ef565b5b5f82013567ffffffffffffffff811115610da057610d9f6109f3565b5b610dac84828501610c46565b91505092915050565b5f81519050919050565b5f82825260208201905092915050565b8281835e5f83830152505050565b5f610de782610db5565b610df18185610dbf565b9350610e01818560208601610dcf565b610e0a81610b3f565b840191505092915050565b5f6020820190508181035f830152610e2d8184610ddd565b905092915050565b5f608082019050610e485f830187610d46565b610e556020830186610a87565b8181036040830152610e678185610ddd565b9050610e766060830184610cf3565b95945050505050565b5f81519050610e8d81610b0d565b92915050565b5f60208284031215610ea857610ea76109ef565b5b5f610eb584828501610e7f565b91505092915050565b7f4e487b71000000000000000000000000000000000000000000000000000000005f52602260045260245ffd5b5f6002820490506001821680610f0257607f821691505b602082108103610f1557610f14610ebe565b5b50919050565b5f819050815f5260205f209050919050565b5f6020601f8301049050919050565b5f82821b905092915050565b5f60088302610f777fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff82610f3c565b610f818683610f3c565b95508019841693508086168417925050509392505050565b5f819050919050565b5f610fbc610fb7610fb284610b04565b610f99565b610b04565b9050919050565b5f819050919050565b610fd583610fa2565b610fe9610fe182610fc3565b848454610f48565b825550505050565b5f5f905090565b611000610ff1565b61100b818484610fcc565b505050565b5b8181101561102e576110235f82610ff8565b600181019050611011565b5050565b601f8211156110735761104481610f1b565b61104d84610f2d565b8101602085101561105c578190505b61107061106885610f2d565b830182611010565b50505b505050565b5f82821c905092915050565b5f6110935f1984600802611078565b1980831691505092915050565b5f6110ab8383611084565b9150826002028217905092915050565b6110c482610db5565b67ffffffffffffffff8111156110dd576110dc610b4f565b5b6110e78254610eeb565b6110f2828285611032565b5f60209050601f831160018114611123575f8415611111578287015190505b61111b85826110a0565b865550611182565b601f19841661113186610f1b565b5f5b8281101561115857848901518255600182019150602085019450602081019050611133565b868310156111755784890151611171601f891682611084565b8355505b6001600288020188555050505b505050505050565b5f81519050919050565b5f81905092915050565b5f6111a88261118a565b6111b28185611194565b93506111c2818560208601610dcf565b80840191505092915050565b5f6111d9828461119e565b915081905092915050565b7f44656c65676174652063616c6c206661696c65640000000000000000000000005f82015250565b5f611218601483610dbf565b9150611223826111e4565b602082019050919050565b5f6020820190508181035f8301526112458161120c565b905091905056fea26469706673582212209e4119ae941cd4b0ff3660322af903429bb0e7a1821fe73463142ee61f41263064736f6c634300081e0033",
    "nonce": 2,
    "storage": {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x01",
    },
  },
  "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266": {
    "balance": "0x3635c9adc5de07e506",
    "code": "0x",
    "nonce": 1,
    "storage": {},
  },
}
`;

exports[`traceCallHandler > should execute a contract call with prestateTracer and diffMode true 1`] = `
{
  "post": {
    "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
      "storage": {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x02",
      },
    },
    "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266": {
      "balance": "0x3635c9adc5de04eadf",
      "nonce": 2,
    },
  },
  "pre": {
    "0x0000000000000000000000000000000000000000": {
      "balance": "0x3635c9adc5dea00000",
      "code": "0x",
      "nonce": 0,
      "storage": {},
    },
    "0x5fbdb2315678afecb367f032d93f642f64180aa3": {
      "balance": "0x0",
      "code": "0x608060405234801561000f575f5ffd5b50600436106100e8575f3560e01c80637fcaf6661161008a578063981f549911610064578063981f549914610220578063d0da9af514610241578063e30081a014610271578063f2c9ecd81461028d576100e8565b80637fcaf666146101c857806389ea642f146101e45780638d5d4de714610202576100e8565b8063349a0054116100c6578063349a00541461014257806338cc48311461015e5780633fb5c1cb1461017c578063575f450514610198576100e8565b806301ef8faa146100ec57806312a7b914146101085780631e26fd3314610126575b5f5ffd5b61010660048036038101906101019190610a51565b6102ab565b005b6101106102ee565b60405161011d9190610a96565b60405180910390f35b610140600480360381019061013b9190610ad9565b610303565b005b61015c60048036038101906101579190610c73565b610356565b005b610166610531565b6040516101739190610d02565b60405180910390f35b61019660048036038101906101919190610d1b565b610559565b005b6101b260048036038101906101ad9190610d1b565b610599565b6040516101bf9190610d55565b60405180910390f35b6101e260048036038101906101dd9190610d6e565b61067c565b005b6101ec6106c6565b6040516101f99190610e15565b60405180910390f35b61020a610756565b6040516102179190610d02565b60405180910390f35b61022861077b565b6040516102389493929190610e35565b60405180910390f35b61025b60048036038101906102569190610d1b565b6107ae565b6040516102689190610d55565b60405180910390f35b61028b60048036038101906102869190610a51565b610964565b005b6102956109de565b6040516102a29190610d55565b60405180910390f35b8060045f6101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff16021790555050565b5f60015f9054906101000a900460ff16905090565b8060015f6101000a81548160ff0219169083151502179055507fd31368d67652afe87682ed73c60ba1c2f499ae414a86d618c275326b0d6739968160405161034b9190610a96565b60405180910390a150565b3073ffffffffffffffffffffffffffffffffffffffff16633fb5c1cb856040518263ffffffff1660e01b815260040161038f9190610d55565b5f604051808303815f87803b1580156103a6575f5ffd5b505af11580156103b8573d5f5f3e3d5ffd5b505050503073ffffffffffffffffffffffffffffffffffffffff16631e26fd33846040518263ffffffff1660e01b81526004016103f59190610a96565b5f604051808303815f87803b15801561040c575f5ffd5b505af115801561041e573d5f5f3e3d5ffd5b505050503073ffffffffffffffffffffffffffffffffffffffff16637fcaf666836040518263ffffffff1660e01b815260040161045b9190610e15565b5f604051808303815f87803b158015610472575f5ffd5b505af1158015610484573d5f5f3e3d5ffd5b505050503073ffffffffffffffffffffffffffffffffffffffff1663e30081a0826040518263ffffffff1660e01b81526004016104c19190610d02565b5f604051808303815f87803b1580156104d8575f5ffd5b505af11580156104ea573d5f5f3e3d5ffd5b505050507fc3e1073869e2f3735605599cbfd67bc84b7ce8f34226501a7c84f1bea115cb0c848484846040516105239493929190610e35565b60405180910390a150505050565b5f60035f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff16905090565b805f819055507f9ec8254969d1974eac8c74afb0c03595b4ffe0a1d7ad8a7f82ed31b9c85425918160405161058e9190610d55565b60405180910390a150565b5f5f60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1690505f8173ffffffffffffffffffffffffffffffffffffffff1663c6888fa1856040518263ffffffff1660e01b81526004016105f99190610d55565b6020604051808303815f875af1158015610615573d5f5f3e3d5ffd5b505050506040513d601f19601f820116820180604052508101906106399190610e93565b90507f9d164645d2740a65754f47c13dc8efcc8a63d0f41785c4d3cd1dfd289e64a3bc8160405161066a9190610d55565b60405180910390a18092505050919050565b806002908161068b91906110bb565b507fd824731128b3439672eb2a63774a112947e43a4102ef25ba8fe18ad8930a9188816040516106bb9190610e15565b60405180910390a150565b6060600280546106d590610eeb565b80601f016020809104026020016040519081016040528092919081815260200182805461070190610eeb565b801561074c5780601f106107235761010080835404028352916020019161074c565b820191905f5260205f20905b81548152906001019060200180831161072f57829003601f168201915b5050505050905090565b60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1681565b5f5f60605f6107886109de565b6107906102ee565b6107986106c6565b6107a0610531565b935093509350935090919293565b5f5f826040516024016107c19190610d55565b6040516020818303038152906040527fc6888fa1000000000000000000000000000000000000000000000000000000007bffffffffffffffffffffffffffffffffffffffffffffffffffffffff19166020820180517bffffffffffffffffffffffffffffffffffffffffffffffffffffffff838183161783525050505090505f5f60045f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1673ffffffffffffffffffffffffffffffffffffffff168360405161088891906111ce565b5f60405180830381855af49150503d805f81146108c0576040519150601f19603f3d011682016040523d82523d5f602084013e6108c5565b606091505b50915091508161090a576040517f08c379a00000000000000000000000000000000000000000000000000000000081526004016109019061122e565b60405180910390fd5b5f8180602001905181019061091f9190610e93565b90507fb26b3b59a9756bf7416fe9326c05726fbfe955ce9e948f70da7a91f4978fb4d2816040516109509190610d55565b60405180910390a180945050505050919050565b8060035f6101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff1602179055507f88749aed52403b3a8ec7763273d5665190617f46de93b08aab1cc6ec80dc2fb4816040516109d39190610d02565b60405180910390a150565b5f5f54905090565b5f604051905090565b5f5ffd5b5f5ffd5b5f73ffffffffffffffffffffffffffffffffffffffff82169050919050565b5f610a20826109f7565b9050919050565b610a3081610a16565b8114610a3a575f5ffd5b50565b5f81359050610a4b81610a27565b92915050565b5f60208284031215610a6657610a656109ef565b5b5f610a7384828501610a3d565b91505092915050565b5f8115159050919050565b610a9081610a7c565b82525050565b5f602082019050610aa95f830184610a87565b92915050565b610ab881610a7c565b8114610ac2575f5ffd5b50565b5f81359050610ad381610aaf565b92915050565b5f60208284031215610aee57610aed6109ef565b5b5f610afb84828501610ac5565b91505092915050565b5f819050919050565b610b1681610b04565b8114610b20575f5ffd5b50565b5f81359050610b3181610b0d565b92915050565b5f5ffd5b5f5ffd5b5f601f19601f8301169050919050565b7f4e487b71000000000000000000000000000000000000000000000000000000005f52604160045260245ffd5b610b8582610b3f565b810181811067ffffffffffffffff82111715610ba457610ba3610b4f565b5b80604052505050565b5f610bb66109e6565b9050610bc28282610b7c565b919050565b5f67ffffffffffffffff821115610be157610be0610b4f565b5b610bea82610b3f565b9050602081019050919050565b828183375f83830152505050565b5f610c17610c1284610bc7565b610bad565b905082815260208101848484011115610c3357610c32610b3b565b5b610c3e848285610bf7565b509392505050565b5f82601f830112610c5a57610c59610b37565b5b8135610c6a848260208601610c05565b91505092915050565b5f5f5f5f60808587031215610c8b57610c8a6109ef565b5b5f610c9887828801610b23565b9450506020610ca987828801610ac5565b935050604085013567ffffffffffffffff811115610cca57610cc96109f3565b5b610cd687828801610c46565b9250506060610ce787828801610a3d565b91505092959194509250565b610cfc81610a16565b82525050565b5f602082019050610d155f830184610cf3565b92915050565b5f60208284031215610d3057610d2f6109ef565b5b5f610d3d84828501610b23565b91505092915050565b610d4f81610b04565b82525050565b5f602082019050610d685f830184610d46565b92915050565b5f60208284031215610d8357610d826109ef565b5b5f82013567ffffffffffffffff811115610da057610d9f6109f3565b5b610dac84828501610c46565b91505092915050565b5f81519050919050565b5f82825260208201905092915050565b8281835e5f83830152505050565b5f610de782610db5565b610df18185610dbf565b9350610e01818560208601610dcf565b610e0a81610b3f565b840191505092915050565b5f6020820190508181035f830152610e2d8184610ddd565b905092915050565b5f608082019050610e485f830187610d46565b610e556020830186610a87565b8181036040830152610e678185610ddd565b9050610e766060830184610cf3565b95945050505050565b5f81519050610e8d81610b0d565b92915050565b5f60208284031215610ea857610ea76109ef565b5b5f610eb584828501610e7f565b91505092915050565b7f4e487b71000000000000000000000000000000000000000000000000000000005f52602260045260245ffd5b5f6002820490506001821680610f0257607f821691505b602082108103610f1557610f14610ebe565b5b50919050565b5f819050815f5260205f209050919050565b5f6020601f8301049050919050565b5f82821b905092915050565b5f60088302610f777fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff82610f3c565b610f818683610f3c565b95508019841693508086168417925050509392505050565b5f819050919050565b5f610fbc610fb7610fb284610b04565b610f99565b610b04565b9050919050565b5f819050919050565b610fd583610fa2565b610fe9610fe182610fc3565b848454610f48565b825550505050565b5f5f905090565b611000610ff1565b61100b818484610fcc565b505050565b5b8181101561102e576110235f82610ff8565b600181019050611011565b5050565b601f8211156110735761104481610f1b565b61104d84610f2d565b8101602085101561105c578190505b61107061106885610f2d565b830182611010565b50505b505050565b5f82821c905092915050565b5f6110935f1984600802611078565b1980831691505092915050565b5f6110ab8383611084565b9150826002028217905092915050565b6110c482610db5565b67ffffffffffffffff8111156110dd576110dc610b4f565b5b6110e78254610eeb565b6110f2828285611032565b5f60209050601f831160018114611123575f8415611111578287015190505b61111b85826110a0565b865550611182565b601f19841661113186610f1b565b5f5b8281101561115857848901518255600182019150602085019450602081019050611133565b868310156111755784890151611171601f891682611084565b8355505b6001600288020188555050505b505050505050565b5f81519050919050565b5f81905092915050565b5f6111a88261118a565b6111b28185611194565b93506111c2818560208601610dcf565b80840191505092915050565b5f6111d9828461119e565b915081905092915050565b7f44656c65676174652063616c6c206661696c65640000000000000000000000005f82015250565b5f611218601483610dbf565b9150611223826111e4565b602082019050919050565b5f6020820190508181035f8301526112458161120c565b905091905056fea26469706673582212209e4119ae941cd4b0ff3660322af903429bb0e7a1821fe73463142ee61f41263064736f6c634300081e0033",
      "nonce": 2,
      "storage": {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x01",
      },
    },
    "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266": {
      "balance": "0x3635c9adc5de07e506",
      "code": "0x",
      "nonce": 1,
      "storage": {},
    },
  },
}
`;
